Fix links for treebanks with enhanced deps

--- a/tables/ud_deps/appos.json
+++ b/tables/ud_deps/appos.json
@@ -220,7 +220,7 @@
         0.12140439932318105,
         0.007014256619144603
       ],
-      "treebank": "UD_Ukrainian-IU@2.14"
+      "treebank": "bUD_Ukrainian-IU@2.14"
     },
     {
       "appos": [
@@ -236,7 +236,7 @@
         0.21559579439252335,
         0.012424890175550806
       ],
-      "treebank": "UD_Dutch-LassySmall@2.14"
+      "treebank": "bUD_Dutch-LassySmall@2.14"
     },
     {
       "appos": [
@@ -252,7 +252,7 @@
         0.09804983748645721,
         0.0062061043837041184
       ],
-      "treebank": "UD_Polish-PDB@2.14"
+      "treebank": "bUD_Polish-PDB@2.14"
     },
     {
       "appos": [
@@ -338,7 +338,7 @@
         0.134,
         0.007288946910356832
       ],
-      "treebank": "UD_Polish-PUD@2.14"
+      "treebank": "bUD_Polish-PUD@2.14"
     },
     {
       "appos": [
@@ -357,7 +357,7 @@
         0.11887456794909067,
         0.00840516552237647
       ],
-      "treebank": "UD_Estonian-EDT@2.14"
+      "treebank": "bUD_Estonian-EDT@2.14"
     },
     {
       "appos": [
@@ -435,7 +435,7 @@
         0.06465730218112516,
         0.003070343033740254
       ],
-      "treebank": "UD_Italian-ISDT@2.14"
+      "treebank": "bUD_Italian-ISDT@2.14"
     },
     {
       "appos": [
@@ -499,7 +499,7 @@
         0.03331564986737401,
         0.0019787691929583546
       ],
-      "treebank": "UD_Latvian-LVTB@2.14"
+      "treebank": "bUD_Latvian-LVTB@2.14"
     },
     {
       "appos": [
@@ -542,7 +542,7 @@
         0.05326743547501373,
         0.0027695690036689652
       ],
-      "treebank": "UD_Lithuanian-ALKSNIS@2.14"
+      "treebank": "bUD_Lithuanian-ALKSNIS@2.14"
     },
     {
       "appos": [
@@ -646,7 +646,7 @@
         0.46036695047367787,
         0.014029868746356857
       ],
-      "treebank": "UD_Catalan-AnCora@2.14"
+      "treebank": "bUD_Catalan-AnCora@2.14"
     },
     {
       "appos": [
@@ -654,7 +654,7 @@
         0.143,
         0.006751652502360718
       ],
-      "treebank": "UD_English-PUD@2.14"
+      "treebank": "bUD_English-PUD@2.14"
     },
     {
       "appos": [
@@ -689,7 +689,7 @@
         0.11442666345806762,
         0.007464063008935685
       ],
-      "treebank": "UD_English-EWT@2.14"
+      "treebank": "bUD_English-EWT@2.14"
     },
     {
       "treebank": "UD_Soi-AHA@2.14"
@@ -724,7 +724,7 @@
         0.13813318677292297,
         0.00795944798483588
       ],
-      "treebank": "UD_Russian-SynTagRus@2.14"
+      "treebank": "bUD_Russian-SynTagRus@2.14"
     },
     {
       "appos": [
@@ -732,7 +732,7 @@
         0.08836611418885867,
         0.005156370520535869
       ],
-      "treebank": "UD_Czech-PDT@2.14"
+      "treebank": "bUD_Czech-PDT@2.14"
     },
     {
       "appos": [
@@ -788,7 +788,7 @@
         0.009857358227994897,
         0.0012980369100613132
       ],
-      "treebank": "UD_Polish-LFG@2.14"
+      "treebank": "bUD_Polish-LFG@2.14"
     },
     {
       "appos": [
@@ -836,7 +836,7 @@
         0.027819690682761224,
         0.002780474471474217
       ],
-      "treebank": "UD_Slovak-SNK@2.14"
+      "treebank": "bUD_Slovak-SNK@2.14"
     },
     {
       "appos": [
@@ -860,7 +860,7 @@
         0.1701649175412294,
         0.012754958700904647
       ],
-      "treebank": "UD_English-GENTLE@2.14"
+      "treebank": "bUD_English-GENTLE@2.14"
     },
     {
       "treebank": "UD_Japanese-GSDLUW@2.14"
@@ -917,7 +917,7 @@
       "treebank": "UD_Finnish-OOD@2.14"
     },
     {
-      "treebank": "UD_Tamil-TTB@2.14"
+      "treebank": "bUD_Tamil-TTB@2.14"
     },
     {
       "appos": [
@@ -925,7 +925,7 @@
         0.05,
         0.005952380952380952
       ],
-      "treebank": "UD_Latvian-Cairo@2.14"
+      "treebank": "bUD_Latvian-Cairo@2.14"
     },
     {
       "treebank": "UD_Georgian-GLC@2.14"
@@ -936,7 +936,7 @@
         0.42560298946891634,
         0.01341993119540398
       ],
-      "treebank": "UD_Spanish-AnCora@2.14"
+      "treebank": "bUD_Spanish-AnCora@2.14"
     },
     {
       "appos": [
@@ -952,7 +952,7 @@
         0.08945560253699789,
         0.006696605206932025
       ],
-      "treebank": "UD_Finnish-TDT@2.14"
+      "treebank": "bUD_Finnish-TDT@2.14"
     },
     {
       "appos": [
@@ -1197,7 +1197,7 @@
         0.08313972784600067,
         0.005174550712662673
       ],
-      "treebank": "UD_Swedish-Talbanken@2.14"
+      "treebank": "bUD_Swedish-Talbanken@2.14"
     },
     {
       "appos": [
@@ -1213,7 +1213,7 @@
         0.03798882681564246,
         0.002077731605964312
       ],
-      "treebank": "UD_English-GUMReddit@2.14"
+      "treebank": "bUD_English-GUMReddit@2.14"
     },
     {
       "appos": [
@@ -1229,7 +1229,7 @@
         0.042633228840125395,
         0.003256393065798295
       ],
-      "treebank": "UD_Czech-FicTree@2.14"
+      "treebank": "bUD_Czech-FicTree@2.14"
     },
     {
       "appos": [
@@ -1253,7 +1253,7 @@
         0.0030526126773208835,
         0.00021774074761926108
       ],
-      "treebank": "UD_Bulgarian-BTB@2.14"
+      "treebank": "bUD_Bulgarian-BTB@2.14"
     },
     {
       "treebank": "UD_Paumari-TueCL@2.14"
@@ -1388,7 +1388,7 @@
         0.08733659800072847,
         0.00436503682367719
       ],
-      "treebank": "UD_Czech-CAC@2.14"
+      "treebank": "bUD_Czech-CAC@2.14"
     },
     {
       "treebank": "UD_Japanese-GSD@2.14"
@@ -1463,7 +1463,7 @@
         0.10586976208117231,
         0.006068327670819177
       ],
-      "treebank": "UD_English-GUM@2.14"
+      "treebank": "bUD_English-GUM@2.14"
     },
     {
       "appos": [
@@ -1575,7 +1575,7 @@
         0.05714285714285714,
         0.007137192704203013
       ],
-      "treebank": "UD_Highland_Puebla_Nahuatl-ITML@2.14"
+      "treebank": "bUD_Highland_Puebla_Nahuatl-ITML@2.14"
     },
     {
       "appos": [
@@ -1634,7 +1634,7 @@
         0.0539053905390539,
         0.004836162652980655
       ],
-      "treebank": "UD_Western_Sierra_Puebla_Nahuatl-ITML@2.14"
+      "treebank": "bUD_Western_Sierra_Puebla_Nahuatl-ITML@2.14"
     },
     {
       "appos": [
@@ -1731,7 +1731,7 @@
         0.106,
         0.006703345348763675
       ],
-      "treebank": "UD_Finnish-PUD@2.14"
+      "treebank": "bUD_Finnish-PUD@2.14"
     },
     {
       "appos": [
@@ -1787,7 +1787,7 @@
         0.06779661016949153,
         0.002110349040624219
       ],
-      "treebank": "UD_Czech-CLTT@2.14"
+      "treebank": "bUD_Czech-CLTT@2.14"
     },
     {
       "appos": [
@@ -1827,7 +1827,7 @@
         0.1720943909431743,
         0.01122168214980778
       ],
-      "treebank": "UD_Dutch-Alpino@2.14"
+      "treebank": "bUD_Dutch-Alpino@2.14"
     },
     {
       "appos": [
@@ -1835,7 +1835,7 @@
         0.097,
         0.005084923464038583
       ],
-      "treebank": "UD_Swedish-PUD@2.14"
+      "treebank": "bUD_Swedish-PUD@2.14"
     },
     {
       "appos": [
@@ -1875,7 +1875,7 @@
         0.23950695572906344,
         0.01980603653120688
       ],
-      "treebank": "UD_Belarusian-HSE@2.14"
+      "treebank": "bUD_Belarusian-HSE@2.14"
     },
     {
       "appos": [
@@ -1934,7 +1934,7 @@
         0.03129346314325452,
         0.0024838549428713363
       ],
-      "treebank": "UD_Estonian-EWT@2.14"
+      "treebank": "bUD_Estonian-EWT@2.14"
     },
     {
       "appos": [
@@ -1950,7 +1950,7 @@
         0.05,
         0.0058823529411764705
       ],
-      "treebank": "UD_Latgalian-Cairo@2.14"
+      "treebank": "bUD_Latgalian-Cairo@2.14"
     },
     {
       "appos": [
@@ -1982,7 +1982,7 @@
         0.124,
         0.006663084363245567
       ],
-      "treebank": "UD_Czech-PUD@2.14"
+      "treebank": "bUD_Czech-PUD@2.14"
     },
     {
       "treebank": "UD_Old_Irish-DipWBG@2.14"
@@ -1993,7 +1993,7 @@
         0.022857142857142857,
         0.001942690626517727
       ],
-      "treebank": "UD_Cappadocian-TueCL@2.14"
+      "treebank": "bUD_Cappadocian-TueCL@2.14"
     },
     {
       "appos": [
@@ -2044,7 +2044,7 @@
         0.10725469728601253,
         0.0029109297977222507
       ],
-      "treebank": "UD_Arabic-PADT@2.14"
+      "treebank": "bUD_Arabic-PADT@2.14"
     },
     {
       "appos": [
@@ -2114,7 +2114,7 @@
         0.05079681274900399,
         0.008327890267798824
       ],
-      "treebank": "UD_Chukchi-HSE@2.14"
+      "treebank": "bUD_Chukchi-HSE@2.14"
     },
     {
       "treebank": "UD_Old_Turkish-Clausal@2.14"
