update Spoken treebank list

--- a/tables/SP_ud_deps/appos.json
+++ b/tables/SP_ud_deps/appos.json
@@ -6,7 +6,7 @@
         "pattern {M -[1=appos,!2]-> N}"
       ],
       "key": null,
-      "users": 24
+      "users": 27
     },
     "appos:trans": {
       "code": [
@@ -52,6 +52,12 @@
       "treebank": "UD_Slovenian-SST@2.16"
     },
     {
+      "treebank": "UD_Nenets-Tundra@2.16"
+    },
+    {
+      "treebank": "UD_Bokota-ChibErgIS@2.16"
+    },
+    {
       "appos": [
         2,
         0.002621231979030144,
@@ -82,6 +88,14 @@
         0.0007038288288288288
       ],
       "treebank": "UD_English-ESLSpok@2.16"
+    },
+    {
+      "appos": [
+        116,
+        0.0031575795519503498,
+        0.0005122091226210978
+      ],
+      "treebank": "UD_English-CHILDES@2.16"
     },
     {
       "appos": [
@@ -128,11 +142,27 @@
     },
     {
       "appos": [
+        11,
+        0.025056947608200455,
+        0.0029681597409606042
+      ],
+      "treebank": "UD_Ika-ChibErgIS@2.16"
+    },
+    {
+      "appos": [
         133,
         0.04144593331255843,
         0.0030061932100718773
       ],
       "treebank": "UD_French-Rhapsodie@2.16"
+    },
+    {
+      "appos": [
+        20,
+        0.07407407407407407,
+        0.004596644449551827
+      ],
+      "treebank": "UD_Greek-Cretan@2.16"
     },
     {
       "appos": [
